# elax

./: .env.example  .gitignore  Dockerfile  PRD.md  README.md  convert_audio.sh  cp.html  docker-compose.yml  index.html  listen-timer.html  listen.html  package-lock.json  package.json  pyproject.toml  server.js  server.py  shake.html  woo_one.m4a
.github/workflows/: deploy.yml
audios/: cry_one_old.m4a  woo_alot.m4a
audios/old/: woo_alot.m4a  woo_one.m4a
bot/: meeting.py  mixer.py  sender.py  thresholds.py
